# bcftools-rs

./: .gitmodules  Cargo.toml  README.md  TODO.md
crates/bcftools-rs/: Cargo.toml
crates/bcftools-rs/benches/: command_harness.rs
crates/bcftools-rs/src/: abuf.rs  convert.rs  diagnostics.rs  filter.rs  getopt.rs  gff.rs  gvcf.rs  header_version.rs  hmm.rs  io.rs  lib.rs  numerics.rs  ploidy.rs  reference.rs  regidx.rs  smpl_ilist.rs  synced.rs  tsv2vcf.rs  vcf_compat.rs  vcfbuf.rs  version.rs
crates/bcftools-rs/src/commands/: annotate.rs  bgzip.rs  concat.rs  consensus.rs  convert.rs  filter.rs  head.rs  index.rs  isec.rs  merge.rs  mod.rs  norm.rs  plugin.rs  query.rs  reheader.rs  sort.rs  stats.rs  tabix.rs  view.rs
crates/bcftools-rs/src/commands/plugins/: ad_bias.rs  add_variantkey.rs  af_dist.rs  mod.rs  (+37 more)
crates/bcftools-rs/tests/: annotate.rs  concat.rs  consensus.rs  convert.rs  filter.rs  fixtures.rs  head.rs  index.rs  isec.rs  merge.rs  norm.rs  plugin_ad_bias.rs  plugin_add_variantkey.rs  plugin_af_dist.rs  plugin_allele_length.rs  plugin_check_ploidy.rs  plugin_check_sparsity.rs  plugin_contrast.rs  plugin_counts.rs  plugin_dosage.rs  plugin_fill_an_ac.rs  plugin_fill_from_fasta.rs  plugin_fill_tags.rs  plugin_fixploidy.rs  plugin_fixref.rs  plugin_frameshifts.rs  plugin_gtisec.rs  plugin_gtsubset.rs  plugin_guess_ploidy.rs  plugin_gvcfz.rs  plugin_impute_info.rs  plugin_indel_stats.rs  plugin_isecgt.rs  plugin_mendelian2.rs  plugin_missing2ref.rs  plugin_parental_origin.rs  plugin_prune.rs  plugin_remove_overlaps.rs  plugin_scatter.rs  plugin_setgt.rs  (+16 more)
(+7 files in other folders)
